[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "req402-sdk"
version = "0.2.0"
description = "The easiest automatic analytics SDK for x402 payments"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "req402"},
]
keywords = ["x402", "payments", "analytics", "micropayments", "fastapi", "revenue"]

dependencies = [
    "fastapi>=0.100",
    "httpx>=0.24",
    "starlette>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.urls]
Homepage = "https://req402.com"
Repository = "https://github.com/req402/req402-sdk"
Documentation = "https://github.com/req402/req402-sdk#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/req402"]
